--- a/css/media-query.css
+++ b/css/media-query.css
@@ -12,7 +12,10 @@
         background-color: antiquewhite;
         
     }
-    #lezioni .row{
+    #lezioni h1{
+        max-width: 100%;
+    }
+    #lezioni{
         max-width: 100%;
         display: flex;
         flex-direction: column;
